--- a/views/networks/network.pug
+++ b/views/networks/network.pug
@@ -1,8 +1,10 @@
-extends layout
+extends ../layout
+
+include ../mixins/user.pug
 
 block content
 
-  include includes/network-header.pug
+  h3= network.name
 
   case users.length
     when 0
@@ -16,9 +18,7 @@ block content
         tbody
           each user in users
             tr
-              td.user-info
-                img.user-picture(src=user.picture alt=user.name)
-                a(href='./networks/' + network.id + '/users/' + user.id)= user.name
+              td: +user(user)(href='./networks/' + network.id + '/users/' + user.id)
               td= user.balance
 
   form(method='POST' action='./networks/' + network.id + '/users')
