Adding a simple user nav for requests and connections pages.

--- a/views/users/user.pug
+++ b/views/users/user.pug
@@ -7,5 +7,9 @@ block content
   h6= network.name
   h3: +user(user)
 
+  nav.menu
+    a(href='./networks/' + network.id + '/users/' + user.id + '/connections') Connections
+    a(href='./networks/' + network.id + '/users/' + user.id + '/connection-requests') Requests
+
   block user-content
 
