--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,6 +17,13 @@ form .user {
   border-radius: 50%;
 }
 
+.menu {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0.5rem;
+  margin-bottom: 2rem;
+}
+
 .limit {
   text-align: center;
 }
@@ -25,7 +32,7 @@ form .user {
   text-align: center;
 }
 
-.credit {
+.credit-number {
   font-size: 2.4rem;
   font-weight: bold;
 }
