Changed credit number CSS class name.

--- a/views/mixins/debt.pug
+++ b/views/mixins/debt.pug
@@ -4,4 +4,4 @@ mixin debt(connection)
       p you owe #{connection.to.name}
     else if connection.debt < 0
       p #{connection.to.name} owes you
-    .credit #{connection.debt}
+    .credit-number #{connection.debt}
