--- a/views/mixins/limit-to.pug
+++ b/views/mixins/limit-to.pug
@@ -1,4 +1,4 @@
 mixin limit-to(connectionRequest)
   .limit
     div you suggested 
-    .credit #{connectionRequest.limit}
+    .credit-number #{connectionRequest.limit}
