--- a/views/mixins/limit-from.pug
+++ b/views/mixins/limit-from.pug
@@ -1,4 +1,4 @@
 mixin limit-from(connectionRequest)
   .limit
     div #{connectionRequest.from.name} suggested 
-    .credit #{connectionRequest.limit}
+    .credit-number #{connectionRequest.limit}
