--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,5 @@ html
     base(href='/')
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    .container
-      block content
+  body.container
+    block content
