--- a/views/users/connection-requests/find-person.pug
+++ b/views/users/connection-requests/find-person.pug
@@ -15,5 +15,5 @@ block user-content
         tbody
           each other in others
             tr
-              td: +user(other)(href='./networks/' + network.id + '/users/' + user.id + '/connection-requests/to/' + other.id + '/define-limit')
+              td: +user(other)(href='./users/' + user.id + '/connection-requests/to/' + other.id + '/define-limit')
               
