--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,5 +5,6 @@ html
     base(href='/')
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Pacifico")
   body.container
     block content
