--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,12 @@
 :root {
-  background: #fcfcfc;
+  --text-color: #333;
+  --link-color: #1EAEDB;
 }
 
 body {
   height: 100vh;
   font-family: 'Open Sans', sans-serif;
-  color: #333;
+  color: var(--text-color);
 }
 
 a {
@@ -20,23 +21,31 @@ button {
   font-family: 'Open Sans', sans-serif; 
 }
 
-body > header > div {
+.user-header {
   padding: 2rem;
   display: flex;
   justify-content: space-between;
 }
-body > header > div > h3 {
-  margin-bottom: 0px;
-}
 
 .credit-network {
   font-family: 'Pacifico', cursive;
+  color: var(--text-color);
+  margin-bottom: 0rem;
 }
 
 body > header > nav {
   display: flex;
   justify-content: space-evenly;
   padding: 1rem;
+}
+
+body > header > nav > a {
+  padding: 0.5rem;
+}
+
+body > header > nav > a.active {
+  color: var(--text-color);
+  border-bottom: 3px solid var(--link-color);
 }
 
 body > main {
@@ -81,4 +90,9 @@ form .user {
 
 .buttons button {
   margin-right: 1rem;
+}
+
+.no-content-message {
+  text-align: center;
+  padding: 2rem;
 }
