Fixing user list header.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,6 +21,10 @@ button {
   font-family: 'Open Sans', sans-serif; 
 }
 
+.header {
+  padding: 2rem;
+}
+
 .user-header {
   padding: 2rem;
   display: flex;
