--- a/views/network/users.pug
+++ b/views/network/users.pug
@@ -5,8 +5,7 @@ include ../mixins/user.pug
 block content
 
   header
-    div
-      h3 Credit Network
+    .header: h3.credit-network Credit Network
 
     nav
       a(href='./network/users') Users
