--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,8 @@
 :root {
   --text-color: #333;
+  --text-color-muted: #999;
   --link-color: #1EAEDB;
+  --font-size-small: 1.2rem;
 }
 
 body {
@@ -88,12 +90,21 @@ form .user {
   font-size: 3rem;
 }
 
-.buttons {
+.actions {
   text-align: center;  
 }
 
-.buttons button {
+.actions button {
   margin-right: 1rem;
+}
+
+.actions button:last-of-type {
+  margin-right: 0rem;
+}
+
+.actions .info {
+  color: var(--text-color-muted);
+  font-size: var(--font-size-small);
 }
 
 .no-content-message {
