--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,12 +15,14 @@ a {
   text-decoration: none;
 }
 
-td, th {
-  border-bottom: none;
-}
-
 button {
   font-family: 'Open Sans', sans-serif; 
+}
+
+@media (min-width: 400px) {
+  .container {
+    width: 100%;
+  }
 }
 
 .header {
@@ -94,8 +96,10 @@ form .user {
   text-align: center;  
 }
 
-.actions button {
-  margin-right: 1rem;
+@media (min-width: 750px) {
+  .actions button {
+    margin-right: 1rem;
+  }
 }
 
 .actions button:last-of-type {
