--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,10 +1,13 @@
 doctype html
 html
   head
-    title= title
+    meta(charset="utf-8")
+    title Credit Network
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     base(href='/')
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Pacifico")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css")
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Pacifico")
   body.container
     block content
