Simplifying file names.

--- a/views/users/connections/index.pug
+++ b/views/users/connections/index.pug
@@ -30,7 +30,7 @@ block content
       p: a.button(href='./users/' + user.id + '/connection-requests/find-person') CREATE CONNECTION
 
     else
-      .no-content-message
+      .dialog
         p You are not connected yet. Create credit connections with people you trust to join the network.
         a.button(href='./users/' + user.id + '/connection-requests/find-person') FIND FRIENDS
 
