Minor text changes.

--- a/views/users/connection-requests/find-person.pug
+++ b/views/users/connection-requests/find-person.pug
@@ -12,11 +12,8 @@ block content
     h4 Create a credit connection with a friend
 
     .info
-      h5 A credit connection is something big!
-      p It means you both accept to owe each other up to 100 credits.
-      p 
-        | The great thing is that when your friend owes you some credit,
-        | you can use these credits to pay anyone in her network. 
+      p A credit connection means you both accept to owe each other up to 100 credits.
+      p When your friend owes you some credit, you can use it to pay anyone in her network. 
 
     p Select someone you trust to create a credit connection. 
 
