--- a/views/users/connection-requests/index.pug
+++ b/views/users/connection-requests/index.pug
@@ -47,5 +47,6 @@ block content
                 button(type='submit') CANCEL
       
     if receivedReqs.length + sentReqs.length === 0
-      p No connection requests waiting.
+      .dialog
+        p No connection requests waiting.
 
